samples/_failures_safe/1761317511_0f3d58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_169437ef.c: In function ‘main’:
./samples/SAFE/__tmp_169437ef.c:173: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_169437ef.c:172:5: error: expected declaration or statement at end of input
  172 |     if
      |     ^~
